--- a/build.gradle
+++ b/build.gradle
@@ -17,9 +17,9 @@ apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-mainClassName = "uk.co.nickthecoder.tickle.editor.EditorKt"
+mainClassName = "uk.co.nickthecoder.tickle.editor.PillPopperKt"
 
-defaultTasks 'installApp'
+defaultTasks 'installDist'
 
 version = '0.1'
 group = 'uk.co.nickthecoder'
@@ -32,7 +32,8 @@ repositories {
 
 dependencies {
 
-    compile 'uk.co.nickthecoder:tickle:0.1'
+    compile 'uk.co.nickthecoder:tickle-core:0.1'
+    compile 'uk.co.nickthecoder:tickle-editor:0.1'
     compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 }
 
