--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ apply plugin: 'kotlin'
 apply plugin: 'idea'
 apply plugin: 'application'
 
-mainClassName = "uk.co.nickthecoder.tickle.editor.PillPopperKt"
+mainClassName = "uk.co.nickthecoder.pillpopper.PillPopperKt"
 
 defaultTasks 'installDist'
 
