--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ project.ext.lwjglVersion = "3.1.3"
 project.ext.jomlVersion = "1.9.4"
 
 buildscript {
-    ext.kotlin_version = '1.1.3-2'
+    ext.kotlin_version = '1.2.51'
 
     repositories {
         mavenCentral()
@@ -31,10 +31,8 @@ repositories {
 }
 
 dependencies {
-
     compile 'uk.co.nickthecoder:tickle-core:0.1'
     compile 'uk.co.nickthecoder:tickle-editor:0.1'
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
 }
 
 compileKotlin {
